优化剪贴板渲染逻辑，重构相关方法以提高可读性和性能